fixed some more bugs and changed file organization

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         <li><a href="pages/jazz-information.html">Jazz Info</a></li>
         <li><a href="pages/artists.html" class="lastitem">Artists</a>
           <ul id="drop-down">
-            <li><a href="people/gerry.html" class="lastitem">Gerry Mulligan</a></li>
-            <li><a href="people/maynard.html" class="lastitem">Maynard Ferguson</a></li>
-            <li><a href="people/stan.html" class="lastitem">Stan Getz</a></li>
-            <li><a href="people/michel.html" class="lastitem">Michel Camilo</a></li>
+            <li id="mobileartists"><a href="pages/artists.html">All Artists</a></li>
+            <li><a href="pages/people/gerry.html" class="lastitem">Gerry Mulligan</a></li>
+            <li><a href="pages/people/maynard.html" class="lastitem">Maynard Ferguson</a></li>
+            <li><a href="pages/people/stan.html" class="lastitem">Stan Getz</a></li>
+            <li><a href="pages/people/michel.html" class="lastitem">Michel Camilo</a></li>
           </ul>
         </li>
       </ul>
