--- a/pages/people/gerry.html
+++ b/pages/people/gerry.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description"
         content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
-    <link rel="shortcut icon" href="images/music-note-alt.png">
-    <link rel="stylesheet" href="../styles/newstyles.css">
-    <link rel="stylesheet" href="../styles/artists.css">
+    <link rel="shortcut icon" href="../../images/music-note-alt.png">
+    <link rel="stylesheet" href="../../styles/newstyles.css">
+    <link rel="stylesheet" href="../../styles/artists.css">
     <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/slicknav.css">
+    <link rel="stylesheet" href="../../styles/slicknav.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/jquery.slicknav.min.js"></script>
+    <script src="../../js/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
@@ -35,10 +35,11 @@
         <nav id="mobile_menu"></nav>
         <nav id="nav_menu">
             <ul>
-                <li><a href="../index.html">Home Page</a></li>
-                <li><a href="../pages/jazz-information.html">Jazz Info</a></li>
-                <li><a href="../pages/artists.html" class="lastitem current">Artists</a>
+                <li><a href="../../index.html">Home Page</a></li>
+                <li><a href="../jazz-information.html">Jazz Info</a></li>
+                <li><a href="../artists.html" class="lastitem current">Artists</a>
                     <ul id="drop-down">
+                        <li id="mobileartists"><a href="../artists.html">All Artists</a></li>
                         <li><a href="gerry.html" class="lastitem current">Gerry Mulligan</a></li>
                         <li><a href="maynard.html" class="lastitem">Maynard Ferguson</a></li>
                         <li><a href="stan.html" class="lastitem">Stan Getz</a></li>
@@ -52,7 +53,7 @@
             <div id="artist2">
                 <h1>Gerry Mulligan</h1>
                 <figure class="fig1">
-                    <img src="../images/gerry_mulligan.jpg"
+                    <img src="../../images/gerry_mulligan.jpg"
                         alt="Image of Gerry Mulligan sitting with his baritone saxophone" id="gerry">
                     <figcaption>Mulligan, c. 1980s, by William P. Gottlieb</figcaption>
                 </figure>
@@ -79,7 +80,7 @@
                     jazz standards and demonstrated his ability to create memorable melodies and intricate arrangements.
                     Throughout his career, Mulligan</p>
                 <figure class="fig2">
-                    <img src="../images/gerry_mulligan2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
+                    <img src="../../images/gerry_mulligan2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
                     <figcaption>Mulligan on piano in the Netherlands in 1960</figcaption>
                 </figure>
                 <p>collaborated with numerous jazz legends, including Thelonious Monk,
