--- a/pages/people/stan.html
+++ b/pages/people/stan.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description"
         content="A quick explanation of jazz and a list of Evan's favorite jazz pieces throughout history.">
-    <link rel="shortcut icon" href="images/music-note-alt.png">
-    <link rel="stylesheet" href="../styles/newstyles.css">
-    <link rel="stylesheet" href="../styles/artists.css">
+    <link rel="shortcut icon" href="../../images/music-note-alt.png">
+    <link rel="stylesheet" href="../../styles/newstyles.css">
+    <link rel="stylesheet" href="../../styles/artists.css">
     <script src="https://kit.fontawesome.com/c4b9b106e7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/slicknav.css">
+    <link rel="stylesheet" href="../../styles/slicknav.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/jquery.slicknav.min.js"></script>
+    <script src="../../js/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
@@ -35,10 +35,11 @@
         <nav id="mobile_menu"></nav>
         <nav id="nav_menu">
             <ul>
-                <li><a href="../index.html">Home Page</a></li>
-                <li><a href="../pages/jazz-information.html">Jazz Info</a></li>
-                <li><a href="../pages/artists.html" class="lastitem current">Artists</a>
+                <li><a href="../../index.html">Home Page</a></li>
+                <li><a href="../jazz-information.html">Jazz Info</a></li>
+                <li><a href="../artists.html" class="lastitem current">Artists</a>
                     <ul id="drop-down">
+                        <li id="mobileartists"><a href="../artists.html">All Artists</a></li>
                         <li><a href="gerry.html" class="lastitem">Gerry Mulligan</a></li>
                         <li><a href="maynard.html" class="lastitem">Maynard Ferguson</a></li>
                         <li><a href="stan.html" class="lastitem current">Stan Getz</a></li>
@@ -52,8 +53,8 @@
             <div id="artist2">
                 <h1>Stan Getz</h1>
                 <figure class="fig1">
-                    <img src="../images/stan_getz.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
-                        id="gerry">
+                    <img src="../../images/stan_getz.jpg"
+                        alt="Image of Gerry Mulligan sitting with his baritone saxophone" id="gerry">
                     <figcaption>Stan Getz in 1958</figcaption>
                 </figure>
                 <p>Stan Getz was an iconic American jazz saxophonist known for his smooth tone and lyrical
@@ -77,7 +78,7 @@
                     Sound." Getz's ability to convey emotion through his playing made him a beloved figure among jazz
                     fans</p>
                 <figure class="fig2">
-                    <img src="../images/stan_getz2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
+                    <img src="../../images/stan_getz2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
                     <figcaption>Stan Getz and Chet Baker in 1983</figcaption>
                 </figure>
                 <p> worldwide. Despite personal struggles with substance abuse, Getz's musical output remained
