--- a/pages/artists.html
+++ b/pages/artists.html
@@ -36,10 +36,11 @@
         <li><a href="jazz-information.html">Jazz Info</a></li>
         <li><a href="artists.html" class="lastitem" id="current">Artists</a>
           <ul id="drop-down">
-            <li><a href="../people/gerry.html" class="lastitem">Gerry Mulligan</a></li>
-            <li><a href="../people/maynard.html" class="lastitem">Maynard Ferguson</a></li>
-            <li><a href="../people/stan.html" class="lastitem">Stan Getz</a></li>
-            <li><a href="../people/michel.html" class="lastitem">Michel Camilo</a></li>
+            <li id="mobileartists"><a href="artists.html">All Artists</a></li>
+            <li><a href="people/gerry.html" class="lastitem">Gerry Mulligan</a></li>
+            <li><a href="people/maynard.html" class="lastitem">Maynard Ferguson</a></li>
+            <li><a href="people/stan.html" class="lastitem">Stan Getz</a></li>
+            <li><a href="people/michel.html" class="lastitem">Michel Camilo</a></li>
           </ul>
         </li>
       </ul>
@@ -48,8 +49,8 @@
     <div class="artists">
       <div id="mulligan">
         <h3>Gerry Mulligan</h3>
-        <img src="../images/gerry_mulligan.jpg" alt="Image of Gerry Mulligan sitting with his baritone saxophone"
-          id="gerry">
+        <a href="people/gerry.html"><img src="../images/gerry_mulligan.jpg"
+            alt="Image of Gerry Mulligan sitting with his baritone saxophone" id="gerry"></a>
         <p>Gerry Mulligan was an American jazz saxophonist, composer, and arranger known for his distinctive sound on
           the baritone saxophone. He was a key figure in the cool jazz movement of the 1950s and played a significant
           role in shaping the West Coast jazz style. Mulligan's arrangements were characterized by their sophisticated
@@ -60,7 +61,8 @@
       </div>
       <div id="ferguson">
         <h3>Maynard Ferguson</h3>
-        <img src="../images/maynard_ferguson.jpg" alt="Image of Maynard Ferguson playing his trumpet" id="maynard">
+        <a href="people/maynard.html"><img src="../images/maynard_ferguson.jpg"
+            alt="Image of Maynard Ferguson playing his trumpet" id="maynard"></a>
         <p>Maynard Ferguson was a Canadian jazz trumpeter and bandleader known for his virtuosic playing and high-energy
           performances. He had a remarkable range and ability to hit incredibly high notes, earning him the nickname
           "The Screaming Trumpet." Ferguson gained popularity in the 1950s and 1960s as a member of Stan Kenton's
@@ -71,7 +73,8 @@
       </div>
       <div id="getz">
         <h3>Stan Getz</h3>
-        <img src="../images/stan_getz.jpg" alt="Image of Stan Getz playing his tenor saxophone" id="stan">
+        <a href="people/stan.html"><img src="../images/stan_getz.jpg"
+            alt="Image of Stan Getz playing his tenor saxophone" id="stan"></a>
         <p>Stan Getz was an iconic American jazz saxophonist known for his smooth tone and lyrical playing style. He
           rose to prominence in the 1950s as one of the leading figures in the cool jazz movement. Getz's melodic
           improvisations and romantic sound captivated listeners and earned him widespread acclaim. His collaboration
@@ -82,7 +85,8 @@
       </div>
       <div id="camilo">
         <h3>Michel Camilo</h3>
-        <img src="../images/michel_camilo.jpg" alt="Michel Camilo with his piano" id="michel">
+        <a href="people/michel.html"><img src="../images/michel_camilo.jpg" alt="Michel Camilo with his piano"
+            id="michel"></a>
         <p>Michel Camilo is a renowned Dominican jazz pianist, composer, and bandleader. His music combines elements of
           jazz, Afro-Caribbean rhythms, and classical influences, showcasing his virtuosity and unique musical vision.
           Camilo's energetic and passionate playing style has made him a highly sought-after performer, and he has
