bug fixes and slight changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>Evan's Favorite Jazz Music</title>
 </head>
 
-<body>
+<body id="main">
   <header>
     <h1><i class="fa-solid fa-music"></i> Evan's Favorite Jazz Music Artists &amp; Songs <i
         class="fa-solid fa-music"></i>
