--- a/pages/people/gerry.html
+++ b/pages/people/gerry.html
@@ -108,59 +108,59 @@
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
                 <table id="table">
                     <tr>
-                        <th class="first">Num</th>
-                        <th class="first">Song</th>
-                        <th class="first">Plays</th>
+                        <th class="top">Num</th>
+                        <th class="top right">Song</th>
+                        <th class="top">Plays</th>
                     </tr>
                     <tr>
                         <td class="center first">1</td>
                         <td class="right">Lullaby Of The Leaves</td>
-                        <td class="center">28.7M</td>
+                        <td class="center last">28.7M</td>
                     </tr>
                     <tr>
                         <td class="center first">2</td>
                         <td class="right">Stardust</td>
-                        <td class="center">12.9M</td>
+                        <td class="center last">12.9M</td>
                     </tr>
                     <tr>
                         <td class="center first">3</td>
                         <td class="right">Prelude In E Minor</td>
-                        <td class="center">7.0M</td>
+                        <td class="center last">7.0M</td>
                     </tr>
                     <tr>
                         <td class="center first">4</td>
                         <td class="right">Walkin' Shoes</td>
-                        <td class="center">6.0M</td>
+                        <td class="center last">6.0M</td>
                     </tr>
                     <tr>
                         <td class="center first">5</td>
                         <td class="right">Night Lights</td>
-                        <td class="center">5.7M</td>
+                        <td class="center last">5.7M</td>
                     </tr>
                     <tr>
                         <td class="center first">6</td>
                         <td class="right">Move</td>
-                        <td class="center">5.2M</td>
+                        <td class="center last">5.2M</td>
                     </tr>
                     <tr>
                         <td class="center first">7</td>
                         <td class="right">Line For Lyons</td>
-                        <td class="center">5.2M</td>
+                        <td class="center last">5.2M</td>
                     </tr>
                     <tr>
                         <td class="center first">8</td>
                         <td class="right">What's The Rush</td>
-                        <td class="center">3.2M</td>
+                        <td class="center last">3.2M</td>
                     </tr>
                     <tr>
                         <td class="center first">9</td>
                         <td class="right">As Time Goes By</td>
-                        <td class="center">2.9M</td>
+                        <td class="center last">2.9M</td>
                     </tr>
                     <tr>
                         <td class="center first">10</td>
                         <td class="right">Bernie's Tune</td>
-                        <td class="center">2.4M</td>
+                        <td class="center last">2.4M</td>
                     </tr>
                 </table>
             </div>
