--- a/pages/people/michel.html
+++ b/pages/people/michel.html
@@ -107,59 +107,59 @@
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
                 <table id="table">
                     <tr>
-                        <th class="first">Num</th>
-                        <th class="first">Song</th>
-                        <th class="first">Plays</th>
+                        <th class="top">Num</th>
+                        <th class="top">Song</th>
+                        <th class="top">Plays</th>
                     </tr>
                     <tr>
                         <td class="center first">1</td>
                         <td class="right">Gnossiennes No.1</td>
-                        <td class="center">2.4M</td>
+                        <td class="center last">2.4M</td>
                     </tr>
                     <tr>
                         <td class="center first">2</td>
                         <td class="right">Caribe</td>
-                        <td class="center">1.5M</td>
+                        <td class="center last">1.5M</td>
                     </tr>
                     <tr>
                         <td class="center first">3</td>
                         <td class="right">From Within - Live</td>
-                        <td class="center">1.2M</td>
+                        <td class="center last">1.2M</td>
                     </tr>
                     <tr>
                         <td class="center first">4</td>
                         <td class="right">Água E Vinho</td>
-                        <td class="center">1.1M</td>
+                        <td class="center last">1.1M</td>
                     </tr>
                     <tr>
                         <td class="center first">5</td>
                         <td class="right">Cinema Paradiso</td>
-                        <td class="center">1.1M</td>
+                        <td class="center last">1.1M</td>
                     </tr>
                     <tr>
                         <td class="center first">6</td>
                         <td class="right">Amor De Conuco</td>
-                        <td class="center">1.0M</td>
+                        <td class="center last">1.0M</td>
                     </tr>
                     <tr>
                         <td class="center first">7</td>
                         <td class="right">Oblivion</td>
-                        <td class="center">944K</td>
+                        <td class="center last">944K</td>
                     </tr>
                     <tr>
                         <td class="center first">8</td>
                         <td class="right">Our Spanish Love Song</td>
-                        <td class="center">843K</td>
+                        <td class="center last">843K</td>
                     </tr>
                     <tr>
                         <td class="center first">9</td>
                         <td class="right">Not Yet</td>
-                        <td class="center">778K</td>
+                        <td class="center last">778K</td>
                     </tr>
                     <tr>
                         <td class="center first">10</td>
                         <td class="right">Why Not!</td>
-                        <td class="center">681K</td>
+                        <td class="center last">681K</td>
                     </tr>
                 </table>
             </div>
