--- a/pages/people/stan.html
+++ b/pages/people/stan.html
@@ -108,59 +108,59 @@
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
                 <table id="table">
                     <tr>
-                        <th class="first">Num</th>
-                        <th class="first">Song</th>
-                        <th class="first">Plays</th>
+                        <th class="top">Num</th>
+                        <th class="top">Song</th>
+                        <th class="top">Plays</th>
                     </tr>
                     <tr>
                         <td class="center first">1</td>
                         <td class="right">The Girl From Ipanema </td>
-                        <td class="center">154M</td>
+                        <td class="center last">154M</td>
                     </tr>
                     <tr>
                         <td class="center first">2</td>
                         <td class="right">Corcovado</td>
-                        <td class="center">92M</td>
+                        <td class="center last">92M</td>
                     </tr>
                     <tr>
                         <td class="center first">3</td>
                         <td class="right">Só Danço Samba</td>
-                        <td class="center">65M</td>
+                        <td class="center last">65M</td>
                     </tr>
                     <tr>
                         <td class="center first">4</td>
                         <td class="right">A Nightingale Sang In Berkeley Square</td>
-                        <td class="center">58M</td>
+                        <td class="center last">58M</td>
                     </tr>
                     <tr>
                         <td class="center first">5</td>
                         <td class="right">Para Machuchar Meu Coracao</td>
-                        <td class="center">47M</td>
+                        <td class="center last">47M</td>
                     </tr>
                     <tr>
                         <td class="center first">6</td>
                         <td class="right">Desafinado</td>
-                        <td class="center">36M</td>
+                        <td class="center last">36M</td>
                     </tr>
                     <tr>
                         <td class="center first">7</td>
                         <td class="right">Corcovado - Single Version</td>
-                        <td class="center">27M</td>
+                        <td class="center last">27M</td>
                     </tr>
                     <tr>
                         <td class="center first">8</td>
                         <td class="right">The Girl From Ipanema - Single Version</td>
-                        <td class="center">26M</td>
+                        <td class="center last">26M</td>
                     </tr>
                     <tr>
                         <td class="center first">9</td>
                         <td class="right">But Beautiful</td>
-                        <td class="center">15M</td>
+                        <td class="center last">15M</td>
                     </tr>
                     <tr>
                         <td class="center first">10</td>
                         <td class="right">The Girl From Ipanema - Live</td>
-                        <td class="center">7.3M</td>
+                        <td class="center last">7.3M</td>
                     </tr>
                 </table>
             </div>
