--- a/pages/people/maynard.html
+++ b/pages/people/maynard.html
@@ -113,59 +113,59 @@
                 <p>This is a list of the top songs by gerry mulligan with stats from spotify!</p>
                 <table id="table">
                     <tr>
-                        <th class="first">Num</th>
-                        <th class="first">Song</th>
-                        <th class="first">Plays</th>
+                        <th class="top">Num</th>
+                        <th class="top">Song</th>
+                        <th class="top">Plays</th>
                     </tr>
                     <tr>
                         <td class="center first">1</td>
                         <td class="right">Birdland</td>
-                        <td class="center">4.9M</td>
+                        <td class="center last">4.9M</td>
                     </tr>
                     <tr>
                         <td class="center first">2</td>
                         <td class="right">Gonna Fly Now</td>
-                        <td class="center">2.1M</td>
+                        <td class="center last">2.1M</td>
                     </tr>
                     <tr>
                         <td class="center first">3</td>
                         <td class="right">Chameleon</td>
-                        <td class="center">2.1M</td>
+                        <td class="center last">2.1M</td>
                     </tr>
                     <tr>
                         <td class="center first">4</td>
                         <td class="right">Macarthur</td>
-                        <td class="center">1.4M</td>
+                        <td class="center last">1.4M</td>
                     </tr>
                     <tr>
                         <td class="center first">5</td>
                         <td class="right">Give It One</td>
-                        <td class="center">1.0M</td>
+                        <td class="center last">1.0M</td>
                     </tr>
                     <tr>
                         <td class="center first">6</td>
                         <td class="right">Coconut Champagne - Live</td>
-                        <td class="center">980K</td>
+                        <td class="center last">980K</td>
                     </tr>
                     <tr>
                         <td class="center first">7</td>
                         <td class="right">It Might As Well Be Spring</td>
-                        <td class="center">909K</td>
+                        <td class="center last">909K</td>
                     </tr>
                     <tr>
                         <td class="center first">8</td>
                         <td class="right">Gospel John</td>
-                        <td class="center">833K</td>
+                        <td class="center last">833K</td>
                     </tr>
                     <tr>
                         <td class="center first">9</td>
                         <td class="right">Mister Mellow</td>
-                        <td class="center">514K</td>
+                        <td class="center last">514K</td>
                     </tr>
                     <tr>
                         <td class="center first">10</td>
                         <td class="right">Cruisin' For A Bluessin'</td>
-                        <td class="center">506K</td>
+                        <td class="center last">506K</td>
                     </tr>
                 </table>
             </div>
