final changes and fixes

--- a/pages/people/gerry.html
+++ b/pages/people/gerry.html
@@ -78,12 +78,12 @@
                     West Coast jazz movement. Mulligan's compositions, such as "Bernie's Tune" and "Walkin' Shoes,"
                     became
                     jazz standards and demonstrated his ability to create memorable melodies and intricate arrangements.
-                    Throughout his career, Mulligan</p>
+                    Throughout his career, Mulligan collaborated with numerous jazz legends,</p>
                 <figure class="fig2">
                     <img src="../../images/gerry_mulligan2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
                     <figcaption>Mulligan on piano in the Netherlands in 1960</figcaption>
                 </figure>
-                <p>collaborated with numerous jazz legends, including Thelonious Monk,
+                <p> including Thelonious Monk,
                     Duke
                     Ellington, and Stan Getz, among others. He also explored various musical styles, experimenting with
                     orchestral arrangements and exploring his love for Brazilian bossa nova. His versatility and
