--- a/pages/people/maynard.html
+++ b/pages/people/maynard.html
@@ -75,7 +75,7 @@
                     pushed the boundaries of traditional big band music, blending complex harmonies, intricate rhythms,
                     and powerful brass sections. His recordings, such as "Birdland," "Gonna Fly Now," and "MacArthur
                     Park," became iconic and showcased his ability to fuse different genres into a cohesive and exciting
-                    musical
+                    musical experience. Ferguson's career was also marked
                 </p>
                 <figure class="fig2">
                     <img src="../../images/maynard_ferguson2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
@@ -84,8 +84,7 @@
                             3.0</a></figcaption>
                 </figure>
                 <p>
-                    experience.
-                    Ferguson's career was also marked by his dedication to musical education. He established the Maynard
+                    by his dedication to musical education. He established the Maynard
                     Ferguson Institute of Jazz Studies, where he mentored aspiring musicians and shared his expertise.
                     Ferguson believed in nurturing young talent and encouraging the next generation of jazz artists.
 
