--- a/pages/people/michel.html
+++ b/pages/people/michel.html
@@ -77,14 +77,16 @@
                     blend jazz harmonies with Latin rhythms, creating a unique and vibrant musical language. Tracks like
                     "Caribe" and "On Fire" showcase his ability to infuse infectious energy and passion into his
                     compositions, while pieces like "Remembrance" demonstrate his talent for crafting beautiful and
-                    emotive ballads. Camilo has received numerous </p>
+                    emotive ballads. Camilo has received numerous accolades throughout his career, including Grammy
+                    Awards</p>
+
                 <figure class="fig2">
                     <img src="../../images/michel_camilo2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
                     <figcaption>Michel Camilo in concert (2015) <a
                             href="https://creativecommons.org/licenses/by-sa/2.0/" target="_blank">CC BY-SA 2.0</a>
                     </figcaption>
                 </figure>
-                <p>accolades throughout his career, including Grammy Awards for his albums
+                <p> for his albums
                     "On Fire" and "Live at the Blue Note." His contributions to the jazz genre have been recognized and
                     celebrated, and he has become an influential figure for aspiring jazz musicians, particularly those
                     interested in incorporating Latin elements into their playing.
