--- a/pages/people/stan.html
+++ b/pages/people/stan.html
@@ -75,13 +75,14 @@
 
                     Getz's playing style was characterized by his beautiful tone and expressive phrasing. His melodic
                     improvisations had a lyrical quality that captivated listeners, earning him the nickname "The
-                    Sound." Getz's ability to convey emotion through his playing made him a beloved figure among jazz
-                    fans</p>
+                    Sound." Getz's ability to convey emotion through his playing made him a beloved figure</p>
+
                 <figure class="fig2">
                     <img src="../../images/stan_getz2.jpg" alt="Gerry Mulligan playing piano" id="gerry2">
                     <figcaption>Stan Getz and Chet Baker in 1983</figcaption>
                 </figure>
-                <p> worldwide. Despite personal struggles with substance abuse, Getz's musical output remained
+                <p> among jazz fans worldwide. Despite personal struggles with substance abuse, Getz's musical output
+                    remained
                     consistently strong.
                     He continued to record and perform throughout his career, exploring various styles and collaborating
                     with both established and emerging musicians. His dedication to his craft and his unwavering
